k8s/vitesweeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitesweeper
  namespace: acanavan-namespace
  annotations:
    com.centurylinklabs.watchtower.enable: "true" # Place annotation here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vitesweeper # app name
  template:
    metadata:
      labels:
        app: vitesweeper # app name
    spec:
      containers:
        - name: vitesweeper # container name
          image: vitesweeper:latest # Replace with your registry
          imagePullPolicy: IfNotPresent # this is redundant because :latest
          ports:
            - containerPort: 80 # Expose port as needed
          readinessProbe: # Add the readiness probe here
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: vitesweeper-service
  namespace: acanavan-namespace
spec:
  selector:
    app: vitesweeper
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
