k8s/ingress.yaml
# you might need the minikube ingress
# use command:
# minikube addons enable ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acanavan-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: vitesweeper.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vitesweeper-service # Change this to the name of the service you want to route to
                port:
                  number: 80
